Used templating for the schema files

--- a/_includes/codeForm.html
+++ b/_includes/codeForm.html
@@ -8,7 +8,7 @@
 
   {% include form/contactDescription.html %}
 
-  {% include form/dateDescription.html created=true lastModified=true metadata=true %}
+  {% include form/date.html created=true lastModified=true metadata=true %}
 
   {% include form/description.html %}
 
