--- a/_includes/form/vcs.html
+++ b/_includes/form/vcs.html
@@ -1,3 +1,3 @@
 <h2>{{ site.VcsDesc[page.lang] }}</h2>
 {% capture vcsText %}{{ site.VcsName[page.lang]}} {% endcapture %}
-{% include form/components/input.html id="vcs" text=vcsText rule="data-rule-alphanum-space-en-fr"}
+{% include form/components/input.html id="vcs" text=vcsText rule="data-rule-alphanum-space-en-fr" %}
