--- a/_includes/standardsSchema.html
+++ b/_includes/standardsSchema.html
@@ -1,26 +1,5 @@
 <ul class="list-unstyled">
-  <li>
-    <details open>
-      <summary>date <span class="bg-primary">{{ site.MandatoryField[page.lang] }}</span> [array]</summary>
-      <p>{{ site.DateCodeDesc[page.lang] }}</p>
-      <ul class="list-unstyled">
-        <li>
-          <details open>
-            <summary>started <span class="bg-primary">{{ site.MandatoryField[page.lang] }}</span> [string]</summary>
-            <h5>{{ site.CodeStarted[page.lang] }}</h5>
-            <p>{{ site.StartedCodeDesc[page.lang] }}</p>
-          </details>
-        </li>
-        <li>
-          <details open>
-            <summary>metadataLastUpdated <span class="bg-primary">{{ site.MandatoryField[page.lang] }}</span> [string]</summary>
-            <h5>{{ site.LastUpdatedCode[page.lang] }}</h5>
-            <p>{{ site.MetaDataLastUpdatedCodeDesc[page.lang] }}</p>
-          </details>
-        </li>
-      </ul>
-    </details>
-  </li>
+  {% include schema/date.html created=true modified=false metadata=true %}
 
   <li>
     <details open>
@@ -74,46 +53,16 @@
     </details>
   </li>
 
-  <li>
-    <details open>
-      <summary>tags <span class="bg-primary">{{ site.MandatoryField[page.lang] }}</span> [array]</summary>
-      <h5>{{ site.TagsName[page.lang] }}</h5>
-      <p>{{ site.TagsCodeDesc[page.lang] }}</p>
-      <ul>
-        <li>{{ site.TagsCodeEN[page.lang] }} <span class="bg-primary">{{ site.MandatoryField[page.lang] }}</span> [array]</li>
-        <li>{{ site.TagsCodeFR[page.lang] }} <span class="bg-primary">{{ site.MandatoryField[page.lang] }}</span> [array]</li>
-      </ul>
-    </details>
-  </li>
+  {% include schema/tags.html %}
 
   <li>
     <details open>
       <summary>administrations <span class="bg-primary">{{ site.MandatoryField[page.lang] }}</span> [array]</summary>
       <p>site administrations descriptions</p>
       <ul class="list-unstyled">
-        <li>
-          <details open>
-            <summary>adminCode <span class="bg-primary">{{ site.MandatoryField[page.lang] }}</span> [string]</summary>
-            <h5>{{ site.AdminCode[page.lang] }}</h5>
-            <p>{{ site.AdminCodeDesc[page.lang] }}</p>
-          </details>
-        </li>
+        {% include schema/adminCode.html %}
 
-        <li>
-          <details open>
-            <summary>contact <span class="bg-primary">{{ site.MandatoryField[page.lang] }}</span> [array]</summary>
-            <p>{{ site.ContactCodeDesc[page.lang] }}</p>
-            <ul class="list-unstyled">
-              <li>
-                <details open>
-                  <summary>email <span class="bg-primary">{{ site.MandatoryField[page.lang] }}</span> [string]</summary>
-                  <h5>{{ site.EmailContactCode[page.lang] }}</h5>
-                  <p>{{ site.EmailContactCodeDesc[page.lang] }}</p>
-                </details>
-              </li>
-            </ul>
-          </details>
-        </li>
+        {% include schema/contact.html %}
 
         <li>
           <details open>
@@ -131,28 +80,12 @@
                 </ul>
               </details>
               </li>
-              <li>
-                <details open>
-                  <summary>name <span class="bg-primary">{{ site.MandatoryField[page.lang] }}</span> [array]</summary>
-                  <h5>{{ site.ProjectName[page.lang] }}</h5>
-                  <p>{{ site.NameCodeDesc[page.lang] }}</p>
-                  <ul>
-                    <li>{{ site.URLLicensesCodeDescEN[page.lang] }} <span class="bg-primary">{{ site.MandatoryField[page.lang] }}</span> [string]</li>
-                    <li>{{ site.URLLicensesCodeDescFR[page.lang] }} <span class="bg-primary">{{ site.MandatoryField[page.lang] }}</span> [string]</li>
-                  </ul>
-                </details>
-              </li>
+              {% include schema/projectName.html %}
             </ul>
           </details>
         </li>
 
-        <li>
-          <details open>
-            <summary>status <span class="bg-primary">{{ site.MandatoryField[page.lang] }}</span> [string]</summary>
-            <h5>{{ site.Status[page.lang] }}</h5>
-            <p>{{ site.StatusDesc[page.lang] }}</p>
-          </details>
-        </li>
+        {% include schema/status.html %}
       </ul>
     </details>
   </li>
