--- a/_includes/ossSchema.html
+++ b/_includes/ossSchema.html
@@ -1,7 +1,7 @@
 <ul class="list-unstyled">
   {% include schema/schemaVersion.html %}
 
-  {% include form/description.html %}
+  {% include schema/description.html %}
 
   {% include schema/homepageURL.html %}
 
