--- a/_includes/ossForm.html
+++ b/_includes/ossForm.html
@@ -16,7 +16,7 @@
 
   {% include form/contactDescription.html %}
 
-  {% include form/dateDescription.html created=true lastModified=false metadata=true %}
+  {% include form/date.html created=true lastModified=false metadata=true %}
 
   <h2>{{ site.DescriptionUsesOss[page.lang] }}</h2>
     <div class="form-group">
