--- a/_includes/standardsForm.html
+++ b/_includes/standardsForm.html
@@ -31,7 +31,7 @@
         <input class="form-control" id="status" name="status" type="text" required="required" />
       </div>
 
-    {% include form/dateDescription.html created=true lastModified=false metadata=true %}
+    {% include form/date.html created=true lastModified=false metadata=true %}
 
     {% include form/description.html %}
 
