--- a/_includes/adminCodeForm.html
+++ b/_includes/adminCodeForm.html
@@ -32,7 +32,7 @@
         <input class="form-control" id="submitterEmail" name="submitterEmail" type="email" required="required"/>
     </div>
     
-    <button id="prbotSubmit" type="button" class="btn btn-primary">Submit</button>
+    <button id="adminPrbotSubmit" type="button" class="btn btn-primary">Submit</button>
     <button id="adminCodeFormReset" type="reset" class="btn btn-default">Reset</button>
     
     <div style="margin-top: 10px">
