--- a/_includes/form/tags.html
+++ b/_includes/form/tags.html
@@ -1,23 +1,11 @@
 <h2>{{ site.TagsDesc[page.lang] }}</h2>
 <div id="tags">
   <div id="tagsEN" class="form-group">
-    <div>
-      <div class="control-group input-group col-xs-2" style="margin-top:10px" >
-        <input type="text" id="tagEN" name="tagEN" class="form-control" required="required">
-        <div class="input-group-btn">
-          <button class="btn btn-default remove" type="button"><i class="glyphicon glyphicon-remove"></i></button>
-        </div>
-      </div>
-      </div>
+    <label class="required" for="tagEN">{{ site.TagsEN[page.lang] }} <strong class="required">({{ site.MandatoryField[page.lang] }})</strong></label>
+    <input type="text" id="tagEN" name="tagEN" class="form-control" required="required">
   </div>
   <div id="tagsFR" class="form-group">
-    <div>
-      <div class="control-group input-group col-xs-2" style="margin-top:10px" >
-        <input type="text" id="tagFR" name="tagFR" class="form-control" required="required">
-        <div class="input-group-btn">
-          <button class="btn btn-default remove" type="button"><i class="glyphicon glyphicon-remove"></i></button>
-        </div>
-      </div>
-      </div>
+    <label class="required" for="tagFR">{{ site.TagsFR[page.lang] }} <strong class="required">({{ site.MandatoryField[page.lang] }})</strong></label>
+    <input type="text" id="tagFR" name="tagFR" class="form-control" required="required">
   </div>
 </div>
